# race-computer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  envsetup.sh  lv_conf.h
src/: main.c  main.cpp
src/datalogger/: DataLogger.cpp  DataLogger.h
src/display/: Display.cpp  Display.h  DisplayModels.h
src/display/datalogger/: DataLogger.cpp
src/display/font/: Fonts.h  martian_mono_14.c  martian_mono_16.c  martian_mono_18.c  martian_mono_20.c  roboto_mono_20.c
src/display/layout/: Colors.h  LayoutModels.h  SectorTimesLayout.cpp  SectorTimesLayout.h
src/display/layout/panels/gps/: GpsPositionExtendedInfoPanel.cpp  GpsPositionExtendedInfoPanel.h
src/display/layout/panels/laptimer/: SimpleLapTimerInfoPanel.cpp  SimpleLapTimerInfoPanel.h
src/display/layout/panels/sector/: ColoredSectorTimesPanel.cpp  ColoredSectorTimesPanel.h
src/display/layout/widgets/sector/: SectorTimeColoredWidget.cpp  SectorTimeColoredWidget.h
src/display/panels/gps/: GpsPositionExtendedInfoPanel.cpp  GpsPositionExtendedInfoPanel.h
src/display/panels/laptimer/: SimpleLapTimerInfoPanel.cpp  SimpleLapTimerInfoPanel.h
src/display/panels/sector/: ColoredSectorTimesPanel.cpp  ColoredSectorTimesPanel.h
src/display/widgets/sector/: SectorTimeColoredWidget.cpp  SectorTimeColoredWidget.h
src/gps/: GPS.cpp  GPS.h  GpsModels.h  UbxCommands.h
src/laptimer/: LapTimer.cpp  LapTimer.h
src/lvgl/: lv_conf.h
